--- a/src/main/java/views/JanelaPrincipal.form
+++ b/src/main/java/views/JanelaPrincipal.form
@@ -74,12 +74,12 @@
               <text value="Consultar Despesas"/>
             </properties>
           </component>
-          <component id="b589d" class="javax.swing.JButton" binding="button4" default-binding="true">
+          <component id="b589d" class="javax.swing.JButton" binding="btnCreateCategoria">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="Criar Categoria"/>
             </properties>
           </component>
         </children>
